# kafka-docker

./: README.md  admin.py  config.py  docker-compose.yml  json_consumer.py  json_consumer_2.py  json_producer.py  json_producer_2.py  producer.py  pyproject.toml  requirements.txt  topic.py
